data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1846.wast
;; 7. **Incorrect Branch Target with Mismatched Types**:    - Construct a block structure where the `blocktype` dictates specific stack types, and attempt a `br` instruction targeting a label with mismatched expected types. Validate proper error handling or incorrect execution if types mismatch is incorrectly allowed.    - **Constraint**: Branching should respect the operand stack types specified by the target blocktype.    - **Focus**: Tests type-checking enforcement during branch resolution.

(assert_invalid
  (module (func $mismatched-types-br (result i32)
    (block (result i32)
      (block (result i32) (br 1 (i64.const 42)) (i32.const 0))
      (i32.const 0)
    )
  ))
  "type mismatch"
)